# clirss

./: .gitignore  README.md  clirss.py  pyproject.toml  stripper.py
